--- a/k8s-cluster/hostname-app/templates/deployment.yaml
+++ b/k8s-cluster/hostname-app/templates/deployment.yaml
@@ -19,15 +19,10 @@ spec:
       labels:
         {{- include "hostname-app.selectorLabels" . | nindent 8 }}
     spec:
-      {{- with .Values.imagePullSecrets }}
-      imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - name: http
-              containerPort: 80
+            - containerPort: 9376
               protocol: TCP
